--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   replay_bloc: ^0.3.0 #状态管理增强
   bloc_concurrency: ^0.3.0 #状态管理增强
   water_drop_nav_bar: ^2.2.2
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
