--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.1
 
 environment:
   sdk: ^3.8.1
@@ -36,8 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8 #苹果图标
-  go_router: ^16.0.0 #路由
-  dio: ^5.8.0+1 #网络请求
+  go_router: ^16.1.0 #路由
+  dio: ^5.9.0 #网络请求
   permission_handler: ^12.0.1 #权限处理
   hive_ce: ^2.11.3 #本地存储
   hive_ce_flutter: ^2.3.1 #本地存储flutter支持
@@ -46,15 +46,15 @@ dependencies:
   easy_refresh: ^3.4.0 #下拉刷新
   extended_image: ^10.0.1 #图片加载
   flutter_smart_dialog: ^4.9.8+8 #对话框
-  package_info_plus: ^8.3.0 #获取包信息
+  package_info_plus: ^8.3.1 #获取包信息
   device_info_plus: ^11.5.0 #获取设备信息
   url_launcher: ^6.3.2 #打开链接
-  share_plus: ^11.0.0 #分享
+  share_plus: ^11.1.0 #分享
   path_provider: ^2.1.5 #获取文件路径
   intl_translation: ^0.20.1 #国际化翻译
   gal: ^2.3.1 #保存图片与视频
   local_auth: ^2.3.0 #本地生物识别
-  connectivity_plus: ^6.1.4 #网络连接状态
+  connectivity_plus: ^6.1.5 #网络连接状态
   flutter_screenutil: ^5.9.3 #屏幕适配
   flutter_bloc: ^9.1.1 #状态管理
   replay_bloc: ^0.3.0 #状态管理增强
